--- a/js/main.css
+++ b/js/main.css
@@ -97,26 +97,26 @@ h1 {
   font-size: 14px;
 }
 
-#instructions .out {
+span.out {
   background: darkblue;
   color: white;
 }
 
-#instructions .var {
+span.var {
   background: orange;
 }
 
-#instructions .num {
+span.num {
   color: blue;
 }
 
-#instructions span {
+span {
   font-family: 'Courier New', Courier, monospace;
   border-radius: 3px;
   padding: 1px 3px;
 }
 
-#instructions .console {
+span.console {
   background: #333;
   color: white;
   display: block;
@@ -199,6 +199,10 @@ h1 {
   padding: 20px;
   /* height of view - height of menu - padding */
   min-height: calc(100vh - 42px - 40px);
+  
+}
+
+#gameChoice .games {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
